+ Update confidenceRating and confidenceClass config in classDescriptions

--- a/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
@@ -454,11 +454,15 @@ organism (searched against NCBI nr)
 Gene.curatorSummary=Summary of information pertaining to a particular gene model, added in manually, either by a \
 TAIR curator or from a community curator working on specific genes or gene families.
 
-mRNA.confidenceClass=Gene model confidence rankings (10-point system) are derived from combined scores of all its exons. \
+MRNA.confidenceClass=Gene model confidence rankings (10-point system) are derived from combined scores of all its exons. \
 The exon rankins are generated based on 4 data types: Arabidopsis transcript data (ESTs, cDNAs, Lister et al. Cell 2008), \
 Proteomics data (Castellana et al. PNAS 2008, Baerenfaller et al. Sciene 2008), Cross-species alignments \
 (Brassica, Radish, 5 dicots (Gm, St, Md, Gh, Vv) and 5 monocots (Ta, Zm, Os, So, Hv) sequences from JCVI Plant TA), \
-Vista genome conservation (Shah et al. Bioinformatics 2004)
+Vista genome conservation (Shah et al. Bioinformatics 2004). Lower score corresponds to higher confidence ranking. \
+For more information, refer to the Documentation for the TAIR gene model and exon confidence ranking system, available here \
+https://www.araport.org/downloads/TAIR10_genome_release/annotation/confidence/DOCUMENTATION_TAIR_Gene_Confidence.pdf
 
-mRNA.confidenceRating=Gene model star rating system (scale of 1-5 stars) derived from the 10-point confidence classification. \
-Lower score correlates to higher confidence rating (1 => *****, 2-3 => ****, 4-5 => ***, 6-7 => **, 8-9 => *, 10 => NO STAR)
+MRNA.confidenceRating=Gene model star rating system (scale of 1-5 stars) derived from the 10-point confidence classification. \
+Lower score correlates to higher confidence rating (1 => *****, 2-3 => ****, 4-5 => ***, 6-7 => **, 8-9 => *, 10 => NO STAR) \
+For more information, refer to the Documentation for the TAIR gene model and exon confidence ranking system, available here \
+https://www.araport.org/downloads/TAIR10_genome_release/annotation/confidence/DOCUMENTATION_TAIR_Gene_Confidence.pdf
