MINE-276 #done MRNA inherits class descriptions from Gene; Changes will be visible in next rebuild of ThaleMine webapp

--- a/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
@@ -432,15 +432,15 @@ See the <a href="http://www.geneontology.org/GO.evidence.shtml">GO website for m
 # ThaleMine Class field descriptions overrides
 Gene.secondaryIdentifier=Any identifier, other than the main organism genome database identifier, which \
 is commonly used to identify a gene (for example, the TAIR internal locus identifier). See 'Synonyms' \
-for other gene names and identifiers for this gene.<p>\
+for other gene names and identifiers for this gene.
 
 Gene.primaryIdentifier=The main identifier used by the organisms main genome database. \
 For example, the Arabidopsis Gene Locus Identifier assigned by TAIR. See 'Synonyms' for \
-other gene names and identifiers for this gene.<p>\
+other gene names and identifiers for this gene.
 
 Gene.name=The gene symbol or common name. For most organisms this will be an officially assigned \
 symbol/name (for example, the Arabidopsis gene symbols). See 'Synonyms' for other gene names and \
-identifiers for this gene.<p>
+identifiers for this gene.
 
 Protein.primaryIdentifier=UniProt entry name (for example FT_ARATH). See 'Synonyms' for other names and \
 identifiers for this protein.
@@ -451,8 +451,16 @@ summary of categories of the associated GO terms (function, process, location), 
 gene expression (location, experiment stages), best <i>A. thaliana</i> BLAST hit and a summary of all BLAST hits by \
 organism (searched against NCBI nr)
 
-Gene.curatorSummary=Summary of information pertaining to a particular gene model, added in manually, either by a \
-TAIR curator or from a community curator working on specific genes or gene families.
+Gene.curatorSummary=Concise description of gene function or functions, compiled either by an in-house TAIR curator \
+or via contributions from the community, based upon published literature relating to the specific gene or gene family.
+
+MRNA.computationalDescription=Computationally derived description which is a combination of the Brief Description, \
+summary of categories of the associated GO terms (function, process, location), list of InterPro domains, summary of \
+gene expression (location, experiment stages), best <i>A. thaliana</i> BLAST hit and a summary of all BLAST hits by \
+organism (searched against NCBI nr)
+
+MRNA.curatorSummary=Concise description of gene function or functions, compiled either by an in-house TAIR curator \
+or via contributions from the community, based upon published literature relating to the specific gene or gene family.
 
 MRNA.confidenceClass=Gene model confidence rankings (10-point system) are derived from combined scores of all its exons. \
 The exon rankins are generated based on 4 data types: Arabidopsis transcript data (ESTs, cDNAs, Lister et al. Cell 2008), \
