adds interpro source (and priorities), see MINE-357. NB: you need to download the interpro file

--- a/thalemine/dbmodel/resources/genomic_priorities.properties
+++ b/thalemine/dbmodel/resources/genomic_priorities.properties
@@ -18,3 +18,9 @@ DataSet.url = thalemine-static, *
 Gene.primaryIdentifier = aip-gff, *
 Pseudogene.sequenceOntologyTerm = aip-gff, *
 TransposableElementGene.sequenceOntologyTerm = aip-gff, *
+
+
+Protein.name = uniprot, *
+Protein.primaryAccession = uniprot, *
+ProteinDomain.shortName = interpro, uniprot, *
+ProteinDomain.name = interpro, *
