Added Gene.organism priority to panther to resolve conflict with phytozome orthologs

--- a/thalemine/dbmodel/resources/genomic_priorities.properties
+++ b/thalemine/dbmodel/resources/genomic_priorities.properties
@@ -18,7 +18,7 @@ DataSet.url = thalemine-static, *
 Gene.primaryIdentifier = aip-gff, *
 Pseudogene.sequenceOntologyTerm = aip-gff, *
 TransposableElementGene.sequenceOntologyTerm = aip-gff, *
-
+Gene.organism = panther, *
 
 Protein.name = uniprot, *
 Protein.primaryAccession = uniprot, *
