--- a/thalemine/dbmodel/resources/genomic_keyDefs.properties
+++ b/thalemine/dbmodel/resources/genomic_keyDefs.properties
@@ -26,3 +26,8 @@ SequenceFeature.key_primaryidentifier=primaryIdentifier
 Sequence.key_md5checksum=md5checksum
 Synonym.key_synonym = subject, value
 Transcript.key_primaryidentifier = primaryIdentifier
+DataSetReference.key_primaryidentifier=name, dataSource
+DataSetCrossReference.key_primaryidentifier=primaryIdentifier, datasetReference
+DataSetCrossReference.key_secondaryidentifier=externalIdentifier, datasetReference
+Metadata.key_primaryidentifier=primaryIdentifier,datasetCrossReference
+Source.key_primaryidentifier=name, type
