--- a/thalemine/dbmodel/resources/genomic_keyDefs.properties
+++ b/thalemine/dbmodel/resources/genomic_keyDefs.properties
@@ -31,3 +31,9 @@ DataSetCrossReference.key_primaryidentifier=primaryIdentifier, datasetReference
 DataSetCrossReference.key_secondaryidentifier=externalIdentifier, datasetReference
 Metadata.key_primaryidentifier=primaryIdentifier,datasetCrossReference
 Source.key_primaryidentifier=name, type
+DataEntity.key_primaryidentifier=primaryIdentifier, datasetCrossReference
+Contact.key_primaryidentifier=primaryIdentifier
+Affiliate.key_primaryidentifier=primaryIdentifier
+AttributionAnnotation.key_primaryidentifier=type, attributee
+AttributionReference.key_primaryidentifier=primaryIdentifier
+AttributionReference.key_secondaryidentifier=subject,attribution
