--- a/thalemine/dbmodel/resources/genomic_keyDefs.properties
+++ b/thalemine/dbmodel/resources/genomic_keyDefs.properties
@@ -26,14 +26,54 @@ SequenceFeature.key_primaryidentifier=primaryIdentifier
 Sequence.key_md5checksum=md5checksum
 Synonym.key_synonym = subject, value
 Transcript.key_primaryidentifier = primaryIdentifier
+
+# Araport Chado Db Keys Definition
+# Data Lineage
 DataSetReference.key_primaryidentifier=name, dataSource
 DataSetCrossReference.key_primaryidentifier=primaryIdentifier, datasetReference
 DataSetCrossReference.key_secondaryidentifier=externalIdentifier, datasetReference
-Metadata.key_primaryidentifier=primaryIdentifier,datasetCrossReference
-Source.key_primaryidentifier=name, type
-DataEntity.key_primaryidentifier=primaryIdentifier, datasetCrossReference
+SourceRecord.key_primaryidentifier=name, type
+DataLineage.key_primaryidentifier=primaryIdentifier,datasetCrossReference
+Metadata.key_primaryidentifier=dataLineage
+
+# Controlled Vocabularies
+ControlledVocabulary.key_primaryIdentifier=uniqueName
+ControlledVocabulary.key_name_dataset=name, datasetReference
+CVTerm.key_primaryIdentifier=uniqueName
+CVTerm.key_name_cv=name, controlledVocabulary
+
+# Stock
+Stock.key_primaryidentifier=primaryIdentifier
+Stock.key_secondaryIdentifier=secondaryIdentifier
+Stock.key_name_type_class_organism=name,type,stockClass,organism
+Strain.key_primaryidentifier=primaryIdentifier
+Strain.key_secondaryidentifier=secondaryIdentifier
+Strain.key_name_type_organism=primaryIdentifier,type,organism
+StockAnnotation.key_primaryidentifier=stock
+ChromosomalConstitutionAnnotation.key_primaryidentifier=stockAnnotation
+GrowthConditionAnnotation.key_primaryidentifier=stockAnnotation
+
+# Genetic Context
+Allele.key_primaryidentifier=primaryIdentifier
+Allele.key_secondaryidentifier=secondaryIdentifier, organism
+Allele.key_symbol_org=symbol, organism
+Genotype.key_primaryidentifier=primaryIdentifier
+Genotype.key_secondaryidentifier=secondaryIdentifier
+Genotype.key_symbol_organism=symbol,organism
+Phenotype.key_primaryidentifier=primaryIdentifier
+
+# Provenance/Attribution
 Contact.key_primaryidentifier=primaryIdentifier
+Contact.key_secondaryidentifier=type,name
 Affiliate.key_primaryidentifier=primaryIdentifier
-AttributionAnnotation.key_primaryidentifier=type, attributee
+Affiliate.key_secondaryidentifier=type,name
+AttributionAnnotation.key_primaryidentifier=primaryIdentifier
+AttributionAnnotation.key_secondaryidentifier=type,attributee
 AttributionReference.key_primaryidentifier=primaryIdentifier
 AttributionReference.key_secondaryidentifier=subject,attribution
+
+#Other 
+GeoLocation.key_primaryidentifier=primaryIdentifier
+
+
+ 
