MINE-806. Build Thalemine Phenotype Module Extension in local Thalemine instance
1. Collections update.

--- a/thalemine/dbmodel/resources/genomic_keyDefs.properties
+++ b/thalemine/dbmodel/resources/genomic_keyDefs.properties
@@ -75,5 +75,9 @@ AttributionReference.key_secondaryidentifier=subject,attribution
 #Other 
 GeoLocation.key_primaryidentifier=primaryIdentifier
 
+#Allele Class
+AlleleClassCV.key_primaryidentifier=uniqueName
+AlleleClass.key_primaryidentifier=uniqueName
+
 
  
