MINE-806. Build Thalemine Phenotype Module Extension in local Thalemine instance
1. Updated CVs defintion

--- a/thalemine/dbmodel/resources/genomic_keyDefs.properties
+++ b/thalemine/dbmodel/resources/genomic_keyDefs.properties
@@ -79,5 +79,48 @@ GeoLocation.key_primaryidentifier=primaryIdentifier
 AlleleClassCV.key_primaryidentifier=uniqueName
 AlleleClass.key_primaryidentifier=uniqueName
 
+#Inheritance Mode
+InheritanceModeCV.key_primaryidentifier=uniqueName
+InheritanceMode.key_primaryidentifier=uniqueName
 
+#MutationSite
+MutationSiteCV.key_primaryidentifier=uniqueName
+MutationSite.key_primaryidentifier=uniqueName
+
+#SequenceAlteration
+SequenceAlterationCV.key_primaryidentifier=uniqueName
+SequenceAlterationType.key_primaryidentifier=uniqueName
+
+#Mutagen
+MutagenCV.key_primaryidentifier=uniqueName
+Mutagen.key_primaryidentifier=uniqueName
+
+#StockCategory
+StockCategoryCV.key_primaryidentifier=uniqueName
+StockCategory.key_primaryidentifier=uniqueName
+
+#StockType
+StockTypeCV.key_primaryidentifier=uniqueName
+StockType.key_primaryidentifier=uniqueName
+
+#StrainType
+StrainTypeCV.key_primaryidentifier=uniqueName
+StrainType.key_primaryidentifier=uniqueName
+
+#ZygosityType
+ZygosityTypeCV.key_primaryidentifier=uniqueName
+ZygosityType.key_primaryidentifier=uniqueName
+
+#Geo Location
+CountryCV.key_primaryidentifier=uniqueName
+RegionCV.key_primaryidentifier=uniqueName
+GeodeticDatumCV.key_primaryidentifier=uniqueName
+
+#ContactType
+ContactTypeCV.key_primaryidentifier=uniqueName
+ContactType.key_primaryidentifier=uniqueName
+
+#AttributionType
+AttributionTypeCV.key_primaryidentifier=uniqueName
+AttributionType.key_primaryidentifier=uniqueName
  
