MINE-806. Build Thalemine Phenotype Module Extension in local Thalemine instance
1. Phenotypes Allele/Genotype associations loading code.

--- a/thalemine/dbmodel/resources/genomic_keyDefs.properties
+++ b/thalemine/dbmodel/resources/genomic_keyDefs.properties
@@ -123,4 +123,8 @@ ContactType.key_primaryidentifier=uniqueName
 #AttributionType
 AttributionTypeCV.key_primaryidentifier=uniqueName
 AttributionType.key_primaryidentifier=uniqueName
+
+# Phenotype
+Phenotype.key_primaryidentifier=primaryIdentifier
+Phenotype.key_secondaryidentifier=secondaryIdentifier
  
