MINE-806. Build Thalemine Phenotype Module Extension in local Thalemine instance
1. Added primary,secondary accession as a string numbers to configure external links.

--- a/thalemine/dbmodel/resources/genomic_keyDefs.properties
+++ b/thalemine/dbmodel/resources/genomic_keyDefs.properties
@@ -127,4 +127,7 @@ AttributionType.key_primaryidentifier=uniqueName
 # Phenotype
 Phenotype.key_primaryidentifier=primaryIdentifier
 Phenotype.key_secondaryidentifier=secondaryIdentifier
+
+# Synonym Type
+Synonym.key_synonym_type=subject, value,type
  
