--- a/thalemine/dbmodel/resources/genomic_priorities.properties
+++ b/thalemine/dbmodel/resources/genomic_priorities.properties
@@ -1,3 +1,6 @@
+#contains only classes that come from more than one source
+#for each class contained every source for that class must be listed
+
 # priority for fields declared in superclass are not overridden by different order in subclass
 # e.g. identfier and organism always have priority as defined in BioEntity
 
@@ -8,17 +11,29 @@
 # To give flybase priority over all other sources for Gene name:
 #
 # Gene.name = flybase, *
-#Lab.address = hormone-expressions, *
+Lab.address = hormone-expressions, *
 DataSet.dataSource = thalemine-static, *
 DataSet.description = thalemine-static, *
 DataSet.url = thalemine-static, *
 Gene.primaryIdentifier = aip-gff, *
 Pseudogene.sequenceOntologyTerm = aip-gff, *
 TransposableElementGene.sequenceOntologyTerm = aip-gff, *
-#Gene.organism = panther, *
+Gene.organism = panther, *
 
-#Protein.name = uniprot, *
-#Protein.primaryAccession = uniprot, *
-#ProteinDomain.shortName = interpro, uniprot, *
-#ProteinDomain.name = interpro, *
+Protein.name = uniprot, *
+Protein.primaryAccession = uniprot, *
+ProteinDomain.shortName = interpro, uniprot, *
+ProteinDomain.name = interpro, *
 
+Publication.pubMedId= *, araport-chado-stock
+Publication.doi = *, araport-chado-stock
+Publication.pages = *, araport-chado-stock
+Publication.year = *, araport-chado-stock
+Publication.volume = *, araport-chado-stock
+Publication.issue = *, araport-chado-stock
+Publication.month = *, araport-chado-stock
+Publication.doi = *, araport-chado-stock
+Publication.journal = *, araport-chado-stock
+Publication.firstAuthor = *, araport-chado-stock
+Publication.abstractText = *, araport-chado-stock
+Publication.title = *, araport-chado-stock
