+ WIP: added code and configs for Protein FASTA loader task

--- a/thalemine/dbmodel/resources/genomic_priorities.properties
+++ b/thalemine/dbmodel/resources/genomic_priorities.properties
@@ -24,6 +24,8 @@ Protein.name = uniprot, *
 Protein.primaryAccession = uniprot, *
 ProteinDomain.shortName = interpro, uniprot, *
 ProteinDomain.name = interpro, *
+Protein.sequence = aip-pep-fasta, *
+Protein.primaryIdentifier = aip-pep-fasta, uniprot
 
 Publication.pubMedId= *, araport-chado-stock
 Publication.doi = *, araport-chado-stock
