+ Add araport-locus-history source to track splits/merges [MINE-1034]   (Above source is based on an intermine-items-xml source, similar to thalemine-static source) + Move bar-expressions_additions to data model out of core thalemine_additions.xml + Replace TAIR10 data sources/sets with Araport11

--- a/thalemine/dbmodel/resources/genomic_priorities.properties
+++ b/thalemine/dbmodel/resources/genomic_priorities.properties
@@ -12,6 +12,7 @@
 #
 # Gene.name = flybase, *
 Lab.address = hormone-expressions, *
+DataSource.name = *, araport-locus-history
 DataSet.dataSource = thalemine-static, *
 DataSet.description = thalemine-static, *
 DataSet.url = thalemine-static, *
