--- a/thalemine/dbmodel/resources/genomic_priorities.properties
+++ b/thalemine/dbmodel/resources/genomic_priorities.properties
@@ -28,15 +28,15 @@ ProteinDomain.name = interpro, *
 Protein.sequence = aip-pep-fasta, *
 Protein.primaryIdentifier = aip-pep-fasta, uniprot
 
-#Publication.pubMedId= *, araport-chado-stock
-#Publication.doi = *, araport-chado-stock
-#Publication.pages = *, araport-chado-stock
-#Publication.year = *, araport-chado-stock
-#Publication.volume = *, araport-chado-stock
-#Publication.issue = *, araport-chado-stock
-#Publication.month = *, araport-chado-stock
-#Publication.doi = *, araport-chado-stock
-#Publication.journal = *, araport-chado-stock
-#Publication.firstAuthor = *, araport-chado-stock
-#Publication.abstractText = *, araport-chado-stock
-#Publication.title = *, araport-chado-stock
+Publication.pubMedId= *, araport-chado-stock
+Publication.doi = *, araport-chado-stock
+Publication.pages = *, araport-chado-stock
+Publication.year = *, araport-chado-stock
+Publication.volume = *, araport-chado-stock
+Publication.issue = *, araport-chado-stock
+Publication.month = *, araport-chado-stock
+Publication.doi = *, araport-chado-stock
+Publication.journal = *, araport-chado-stock
+Publication.firstAuthor = *, araport-chado-stock
+Publication.abstractText = *, araport-chado-stock
+Publication.title = *, araport-chado-stock
