--- a/thalemine/dbmodel/resources/genomic_priorities.properties
+++ b/thalemine/dbmodel/resources/genomic_priorities.properties
@@ -25,7 +25,7 @@ Protein.name = uniprot, *
 Protein.primaryAccession = uniprot, *
 ProteinDomain.shortName = interpro, uniprot, *
 ProteinDomain.name = interpro, *
-Protein.sequence = aip-pep-fasta, *
+Protein.sequence = aip-pep-fasta, uniprot-fasta, uniprot, *
 Protein.primaryIdentifier = aip-pep-fasta, uniprot
 
 Publication.pubMedId= *, araport-chado-stock
@@ -40,3 +40,4 @@ Publication.journal = *, araport-chado-stock
 Publication.firstAuthor = *, araport-chado-stock
 Publication.abstractText = *, araport-chado-stock
 Publication.title = *, araport-chado-stock
+
