--- a/thalemine/dbmodel/resources/genomic_priorities.properties
+++ b/thalemine/dbmodel/resources/genomic_priorities.properties
@@ -11,19 +11,21 @@
 # To give flybase priority over all other sources for Gene name:
 #
 # Gene.name = flybase, *
-Lab.address = hormone-expressions, *
+#Lab.address = hormone-expressions, *
 DataSet.dataSource = thalemine-static, *
 DataSet.description = thalemine-static, *
 DataSet.url = thalemine-static, *
-Gene.primaryIdentifier = aip-gff, *
-Pseudogene.sequenceOntologyTerm = aip-gff, *
-TransposableElementGene.sequenceOntologyTerm = aip-gff, *
-Gene.organism = panther, *
+#Gene.primaryIdentifier = aip-gff, *
+Gene.primaryIdentifier = *
+#Pseudogene.sequenceOntologyTerm = aip-gff, *
+#TransposableElementGene.sequenceOntologyTerm = aip-gff, *
+#Gene.organism = panther, *
+Gene.organism = *
 
-Protein.name = uniprot, *
-Protein.primaryAccession = uniprot, *
-ProteinDomain.shortName = interpro, uniprot, *
-ProteinDomain.name = interpro, *
+#Protein.name = uniprot, *
+#Protein.primaryAccession = uniprot, *
+#ProteinDomain.shortName = interpro, uniprot, *
+#ProteinDomain.name = interpro, *
 
 Publication.pubMedId= *, araport-chado-stock
 Publication.doi = *, araport-chado-stock
