--- a/thalemine/dbmodel/resources/genomic_keyDefs.properties
+++ b/thalemine/dbmodel/resources/genomic_keyDefs.properties
@@ -128,4 +128,11 @@ Phenotype.key_secondaryidentifier=secondaryIdentifier
 
 # Synonym Type
 Synonym.key_synonym_type=subject, value,type
+
+# Phenotype Annotation
+PhenotypeAnnotation.key_primaryidentifier=phenotype,genotype, stock, publication
+
+#Genotype Zygosity
+GenotypeZygosity.key_primaryidentifier=allele,stock,genotype,zygosity
+
  
