adds priority for term name (MINE-1084)

--- a/thalemine/dbmodel/resources/genomic_priorities.properties
+++ b/thalemine/dbmodel/resources/genomic_priorities.properties
@@ -17,6 +17,7 @@ DataSet.dataSource = thalemine-static, *
 DataSet.description = thalemine-static, *
 DataSet.url = thalemine-static, *
 Gene.primaryIdentifier = aip-gff, *
+#Gene.symbol = aip-gff, *
 Pseudogene.sequenceOntologyTerm = aip-gff, *
 TransposableElementGene.sequenceOntologyTerm = aip-gff, *
 Gene.organism = panther, *
@@ -41,3 +42,4 @@ Publication.firstAuthor = *, araport-chado-stock
 Publication.abstractText = *, araport-chado-stock
 Publication.title = *, araport-chado-stock
 
+InteractionTerm.name = psi-mi-ontology, *
