--- a/thalemine/dbmodel/resources/genomic_priorities.properties
+++ b/thalemine/dbmodel/resources/genomic_priorities.properties
@@ -17,6 +17,7 @@ DataSet.dataSource = thalemine-static, *
 DataSet.description = thalemine-static, *
 DataSet.url = thalemine-static, *
 Gene.primaryIdentifier = aip-gff, *
+Transcript.primaryIdentifier = aip-gff, *
 #Gene.symbol = aip-gff, *
 Pseudogene.sequenceOntologyTerm = aip-gff, *
 TransposableElementGene.sequenceOntologyTerm = aip-gff, *
