corrects issue with more specific mRNA classes (MINE-1138)

--- a/thalemine/dbmodel/resources/genomic_priorities.properties
+++ b/thalemine/dbmodel/resources/genomic_priorities.properties
@@ -17,11 +17,11 @@ DataSet.dataSource = thalemine-static, *
 DataSet.description = thalemine-static, *
 DataSet.url = thalemine-static, *
 Gene.primaryIdentifier = aip-gff, *
-Transcript.primaryIdentifier = aip-gff, *
 #Gene.symbol = aip-gff, *
 Pseudogene.sequenceOntologyTerm = aip-gff, *
 TransposableElementGene.sequenceOntologyTerm = aip-gff, *
 Gene.organism = panther, *
+Transcript.sequenceOntologyTerm = *, rnaseq-expression
 
 Protein.name = uniprot, *
 Protein.primaryAccession = uniprot, *
