adds keys for RNAseq experiment

--- a/thalemine/dbmodel/resources/genomic_keyDefs.properties
+++ b/thalemine/dbmodel/resources/genomic_keyDefs.properties
@@ -27,6 +27,8 @@ Sequence.key_md5checksum=md5checksum
 Synonym.key_synonym = subject, value
 Transcript.key_primaryidentifier = primaryIdentifier
 
+RnaseqExperiment.key_sra=SRAaccession
+
 # Araport Chado Db Keys Definition
 # Data Lineage
 DataSetReference.key_primaryidentifier=name, dataSource
@@ -70,7 +72,7 @@ AttributionAnnotation.key_secondaryidentifier=type,attributee
 AttributionReference.key_primaryidentifier=primaryIdentifier
 AttributionReference.key_secondaryidentifier=subject,attribution
 
-#Other 
+#Other
 GeoLocation.key_primaryidentifier=primaryIdentifier
 
 #Allele Class
@@ -135,4 +137,3 @@ PhenotypeAnnotation.key_primaryidentifier=phenotype,genotype, stock, publication
 #Genotype Zygosity
 GenotypeZygosity.key_primaryidentifier=allele,stock,genotype,zygosity
 
- 
