WIP: Modify Araport GFF loader to parse protein & integrate with UniProt [MIE-1077] Add missing *-fasta_keys.properties files for Araport CDS and PEP fasta loaders

--- a/thalemine/dbmodel/resources/genomic_priorities.properties
+++ b/thalemine/dbmodel/resources/genomic_priorities.properties
@@ -28,7 +28,8 @@ Protein.primaryAccession = uniprot, *
 ProteinDomain.shortName = interpro, uniprot, *
 ProteinDomain.name = interpro, *
 Protein.sequence = aip-pep-fasta, uniprot-fasta, uniprot, *
-Protein.primaryIdentifier = aip-pep-fasta, uniprot
+Protein.primaryIdentifier = aip-pep-fasta, aip-gff, uniprot
+Protein.length = aip-pep-fasta, uniprot, uniprot-fasta, aip-gff
 
 Publication.pubMedId= *, araport-chado-stock
 Publication.doi = *, araport-chado-stock
