+ Update genomic_priorities, decrease priority of `uniprot-fasta` [MINE-1213] + Update refsAndCollections HashMap according to data model hierarchy + Add missing class names to soClassName.properties + Minor update to GFF data model

--- a/bio/core/main/resources/soClassName.properties
+++ b/bio/core/main/resources/soClassName.properties
@@ -35,6 +35,7 @@ AntiparallelBetaStrand antiparallel_beta_strand
 Antisense antisense
 AntisensePrimaryTranscript antisense_primary_transcript
 AntisenseRNA antisense_RNA
+AntisenseLncRNA antisense_lncRNA
 ApicoplastChromosome apicoplast_chromosome
 ApicoplastGene apicoplast_gene
 ApicoplastSequence apicoplast_sequence
@@ -732,6 +733,7 @@ LeucoplastSequence leucoplast_sequence
 LeucylTRNA leucyl_tRNA
 LigationBasedRead ligation_based_read
 LincRNA lincRNA
+LncRNA lnc_RNA
 Linear linear
 LinearDoubleStrandedDNAChromosome linear_double_stranded_DNA_chromosome
 LinearDoubleStrandedRNAChromosome linear_double_stranded_RNA_chromosome
@@ -936,6 +938,7 @@ NucleomorphicSequence nucleomorphic_sequence
 NucleotideMatch nucleotide_match
 NucleotideMotif nucleotide_motif
 ORF ORF
+UORF uORF
 OctamerMotif octamer_motif
 Oligo oligo
 OligoUTail oligo_U_tail
