--- a/thalemine/dbmodel/resources/genomic_priorities.properties
+++ b/thalemine/dbmodel/resources/genomic_priorities.properties
@@ -27,9 +27,9 @@ Protein.name = uniprot, *
 Protein.primaryAccession = uniprot, *
 ProteinDomain.shortName = interpro, uniprot, *
 ProteinDomain.name = interpro, *
-Protein.sequence = uniprot, uniprot-fasta, aip-pep-fasta
-Protein.primaryIdentifier = uniprot, uniprot-fasta, aip-pep-fasta, aip-gff, *
-Protein.length = uniprot, uniprot-fasta, aip-pep-fasta, *
+Protein.sequence = uniprot-fasta, uniprot, aip-pep-fasta, *
+Protein.primaryIdentifier = uniprot, aip-pep-fasta, aip-gff, *
+Protein.length = uniprot-fasta, uniprot, aip-pep-fasta, *
 
 Publication.pubMedId= *, araport-chado-stock
 Publication.doi = *, araport-chado-stock
