--- a/bio/webapp/resources/webapp/WEB-INF/soClassName.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/soClassName.properties
@@ -35,6 +35,7 @@ AntiparallelBetaStrand antiparallel_beta_strand
 Antisense antisense
 AntisensePrimaryTranscript antisense_primary_transcript
 AntisenseRNA antisense_RNA
+AntisenseLncRNA antisense_lncRNA
 ApicoplastChromosome apicoplast_chromosome
 ApicoplastGene apicoplast_gene
 ApicoplastSequence apicoplast_sequence
@@ -732,6 +733,7 @@ LeucoplastSequence leucoplast_sequence
 LeucylTRNA leucyl_tRNA
 LigationBasedRead ligation_based_read
 LincRNA lincRNA
+LncRNA lnc_RNA
 Linear linear
 LinearDoubleStrandedDNAChromosome linear_double_stranded_DNA_chromosome
 LinearDoubleStrandedRNAChromosome linear_double_stranded_RNA_chromosome
@@ -936,6 +938,7 @@ NucleomorphicSequence nucleomorphic_sequence
 NucleotideMatch nucleotide_match
 NucleotideMotif nucleotide_motif
 ORF ORF
+UORF uORF
 OctamerMotif octamer_motif
 Oligo oligo
 OligoUTail oligo_U_tail
