--- a/bio/core/main/resources/gff_config.properties
+++ b/bio/core/main/resources/gff_config.properties
@@ -1,7 +1,13 @@
 # configuration file that determines which terms in the gff3 file should be included, and how to handle attributes
 
+
+
 9606.excludes=region
 9606.gene.attributes.Dbxref.GeneID=primaryIdentifier
+
+344734.attributes.gene_id=primaryIdentifier
+344734.attributes.uniprot_description=name
+344734.attributes.EC=secondaryIdentifier
 
 224308.terms=gene
 224308.attributes.locus_tag=primaryIdentifier
