--- a/rumenmine/dbmodel/resources/genomic_keyDefs.properties
+++ b/rumenmine/dbmodel/resources/genomic_keyDefs.properties
@@ -15,7 +15,8 @@ OntologyRelation.key=parentTerm, childTerm, relationship
 OntologyTerm.key_identifier=identifier
 OntologyTerm.key_name_ontology=name, ontology
 OntologyTermSynonym.key=name, type
-Organism.key_taxonid=taxonId
+#Organism.key_name_taxonid=taxonId
+Organism.key_name_taxonid=taxonId, name
 ProteinDomain.key_identifier = primaryIdentifier
 Protein.key_md5checksum_taxonid=md5checksum, organism
 Protein.key_primaryacc=primaryAccession
