--- a/bio/sources/pancancer-expression/resources/pancancer-expression_keys.properties
+++ b/bio/sources/pancancer-expression/resources/pancancer-expression_keys.properties
@@ -4,3 +4,6 @@ SOTerm.key = name, ontology
 Organism.key = taxonId
 Ontology.key = name
 Publication.key = pubMedId
+Gene.key_primaryidentifier = primaryIdentifier
+Transcript.key_primaryidentifier = primaryIdentifier
+RnaseqExperiment.key = SRAaccession
