--- a/bio/sources/pancancer-expression/resources/pancancer-expression_keys.properties
+++ b/bio/sources/pancancer-expression/resources/pancancer-expression_keys.properties
@@ -5,5 +5,4 @@ Organism.key = taxonId
 Ontology.key = name
 Publication.key = pubMedId
 Gene.key_primaryidentifier = primaryIdentifier
-Transcript.key_primaryidentifier = primaryIdentifier
-RnaseqExperiment.key = SRAaccession
+#RnaseqExperiment.key = SRAaccession
