--- a/bio/sources/pancancer-expression/resources/pancancer-expression_keys.properties
+++ b/bio/sources/pancancer-expression/resources/pancancer-expression_keys.properties
@@ -5,4 +5,4 @@ Organism.key = taxonId
 Ontology.key = name
 Publication.key = pubMedId
 Gene.key_primaryidentifier = primaryIdentifier
-PanCancerExperiment.key = tissue, type, location
+PanCancerExperiment.key = tissue, tissueType, location
